# otus_python_basic_course_homeworks

./: README.md  __init__.py  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  pyproject.toml  requirements.txt
homework_03/hw3/: .dockerignore  main.py
homework_03/hw3/pings/: view.py
homework_04/: README.md  __init__.py  base_model.py  config.py  docker-compose.yml  init_db.py  jsonplaceholder_requests.py  main.py  models.py
homework_04/alembic/: env.py
homework_04/alembic/versions/: 49d4ea736cca_create_users_posts_tables.py  718506f9f1b9_init_db.py
homework_04/models/: post.py  user.py
testing/test_homework_04/: test_main.py
