[tool.poetry]
name = "hw3"
version = "0.1.0"
description = "Homework number 3"
authors = ["dshuttles <2chelnokov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
